# Astra-toolbox-Cone-templete

./: CMakeLists.txt  README.md  geometry.xml  main.cpp
astra-2.1.0/: Algorithm.cpp  ArtAlgorithm.cpp  AstraObjectFactory.cpp  AstraObjectManager.cpp  AsyncAlgorithm.cpp  BackProjectionAlgorithm.cpp  CglsAlgorithm.cpp  CompositeGeometryManager.cpp  ConeProjectionGeometry3D.cpp  ConeVecProjectionGeometry3D.cpp  Config.cpp  CudaBackProjectionAlgorithm.cpp  CudaBackProjectionAlgorithm3D.cpp  CudaCglsAlgorithm.cpp  CudaCglsAlgorithm3D.cpp  CudaDartMaskAlgorithm.cpp  CudaDartMaskAlgorithm3D.cpp  CudaDartSmoothingAlgorithm.cpp  CudaDartSmoothingAlgorithm3D.cpp  CudaDataOperationAlgorithm.cpp  CudaEMAlgorithm.cpp  CudaFDKAlgorithm3D.cpp  CudaFilteredBackProjectionAlgorithm.cpp  CudaForwardProjectionAlgorithm.cpp  CudaForwardProjectionAlgorithm3D.cpp  CudaProjector2D.cpp  CudaProjector3D.cpp  CudaReconstructionAlgorithm2D.cpp  CudaRoiSelectAlgorithm.cpp  CudaSartAlgorithm.cpp  CudaSirtAlgorithm.cpp  CudaSirtAlgorithm3D.cpp  DataProjector.cpp  DataProjectorPolicies.cpp  FanFlatBeamLineKernelProjector2D.cpp  FanFlatBeamStripKernelProjector2D.cpp  FanFlatProjectionGeometry2D.cpp  FanFlatVecProjectionGeometry2D.cpp  Features.cpp  FilteredBackProjectionAlgorithm.cpp  (+49 more)
astra-2.1.0/astra/: Algorithm.h  AlgorithmTypelist.h  ArtAlgorithm.h  AstraObjectFactory.h  AstraObjectManager.h  AsyncAlgorithm.h  BackProjectionAlgorithm.h  CglsAlgorithm.h  CompositeGeometryManager.h  ConeProjectionGeometry3D.h  (+92 more)
include/: ConeProjector.h  DataLoader.h  Radon.h
src/: ConeProjector.cpp  Radon.cpp
(+59 files in other folders)
